# Video-Game-Sales-Predictor

./: Makefile  README.md  environment.yml  pyproject.toml
Video Game Sales Predictor Module/: __init__.py  dataset.py  features.py  plots.py
Video Game Sales Predictor Module/modeling/: predict.py  train.py
