[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "Video Game Sales Predictor Module"
version = "0.0.1"
description = "The capstone project for INST414 by Seamus Sullivan."
authors = [
  { name = "Seamus Sullivan" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["Video Game Sales Predictor Module"]
include = ["pyproject.toml", "Video Game Sales Predictor Module/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["Video Game Sales Predictor Module"]
force-sort-within-sections = true

